add a menu according to #3

--- a/template/d3.html
+++ b/template/d3.html
@@ -10,6 +10,10 @@
   <body>
 
     <div class="chart"></div>
+    <div class="menu">
+      Menu
+      <input type="text" class="filterInput">
+    </div>
     <div class="legend">
       <h1>Legend</h1>
       <div class="link--target">Used by</div>
