--- a/template_src/stylesheet/legend.css
+++ b/template_src/stylesheet/legend.css
@@ -8,3 +8,10 @@
   border: 1px solid #000;
   border-radius: 5px;
 }
+
+.legend h1 {
+	text-align: center;
+	font-size: 1.2em;
+	font-weight: bold;
+	padding-bottom: 8px;
+}
