new version 0.2.1 fix bugs #8 #9 #12 #13 #15 #16

--- a/template/index.html
+++ b/template/index.html
@@ -3,10 +3,10 @@
 	<head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="description" content="A grunt plugin that draws your javascript project dependencies."/>
+    <meta name="description" content="[%= description %]"/>
     <meta name="viewport" content="width=device-width"/>
-    <link rel="shortcut icon" type="image/png" href="template_src/assets/img/favicon.png" />
-    <title>grunt-draw-my-project</title>
+    <link rel="shortcut icon" type="image/png" href="[%= favicon %]" />
+    <title>[%= name %]</title>
   </head>
 	<body ng-app="app">
 
@@ -19,11 +19,11 @@
     <footer>Generated in [%= timeGeneration %]msc with &#9829; by <a href="https://github.com/manland/draw-my-project">Draw my project</a></footer>
 
     
-      <link rel="stylesheet" type="text/css" href="stylesheet/grunt-draw-my-project-0.2.0.css">
+      <link rel="stylesheet" type="text/css" href="stylesheet/grunt-draw-my-project-0.2.1.css">
     
 
     
-      <script type="text/javascript" src="grunt-draw-my-project-0.2.0.js"></script>
+      <script type="text/javascript" src="grunt-draw-my-project-0.2.1.js"></script>
     
 
 	</body>
