--- a/template_src/stylesheet/chart.css
+++ b/template_src/stylesheet/chart.css
@@ -4,11 +4,12 @@
   padding-top: 60px;
 }
 
-	.chart svg {
+	.svgContainer {
 		position: absolute;
-		top: 10px;
+		top: 0;
 		bottom: 0;
 		left: 0;
 		right: 0;
 		margin: auto;
+		text-align: center;
 	}
