new version 0.2.2 : fix bugs #10 #14 #18 #19 #20 #23

--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="[%= description %]"/>
     <meta name="viewport" content="width=device-width"/>
     <link rel="shortcut icon" type="image/png" href="[%= favicon %]" />
-    <title>[%= name %]</title>
+    <title>[%= title %]</title>
   </head>
 	<body ng-app="app">
 
@@ -16,14 +16,14 @@
 
     <header ng-include="'src/headerView/HeaderView.tpl.html'" ng-controller="HeaderViewCtrl" ng-style="style"></header>
     <section ng-view></section>
-    <footer>Generated in [%= timeGeneration %]msc with &#9829; by <a href="https://github.com/manland/draw-my-project">Draw my project</a></footer>
+    <footer>Generated in [%= timeGeneration %]msc with &#9829; by <a href="https://github.com/manland/draw-my-project" target="_blank">Draw my project</a></footer>
 
     
-      <link rel="stylesheet" type="text/css" href="stylesheet/grunt-draw-my-project-0.2.1.css">
+      <link rel="stylesheet" type="text/css" href="stylesheet/grunt-draw-my-project-0.2.2.css">
     
 
     
-      <script type="text/javascript" src="grunt-draw-my-project-0.2.1.js"></script>
+      <script type="text/javascript" src="grunt-draw-my-project-0.2.2.js"></script>
     
 
 	</body>
