new version 0.2.3 : better skin (#14, #24, #11, #25, #27)

--- a/template/index.html
+++ b/template/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="[%= favicon %]" />
     <title>[%= title %]</title>
   </head>
-	<body ng-app="app">
+	<body ng-app="app" on-off-switch>
 
     <noscript>
       <h1 class="bg-red">Please, activate javascript in your browser !</h1>
@@ -19,11 +19,11 @@
     <footer>Generated in [%= timeGeneration %]msc with &#9829; by <a href="https://github.com/manland/draw-my-project" target="_blank">Draw my project</a></footer>
 
     
-      <link rel="stylesheet" type="text/css" href="stylesheet/grunt-draw-my-project-0.2.2.css">
+      <link rel="stylesheet" type="text/css" href="stylesheet/grunt-draw-my-project-0.2.3.css">
     
 
     
-      <script type="text/javascript" src="grunt-draw-my-project-0.2.2.js"></script>
+      <script type="text/javascript" src="grunt-draw-my-project-0.2.3.js"></script>
     
 
 	</body>
