close #31 : modif footer color

--- a/template_src/stylesheet/footer.css
+++ b/template_src/stylesheet/footer.css
@@ -5,5 +5,9 @@ footer {
   width: 100%;
   text-align: center;
   font-size: 0.8em;
-  color: #ccc;
+  color: #666;
 }
+
+	footer a {
+		color: inherit;
+	}
