--- a/template_src/stylesheet/filter.css
+++ b/template_src/stylesheet/filter.css
@@ -1,7 +1,7 @@
 .filterView {
 	display: inline-block;
 	position: fixed;
-	top: 55px;
+	top: 45px;
 	bottom: 0;
 	padding: 5px;
 	overflow: auto;
@@ -22,4 +22,5 @@
 
 	.filterView ul {
 		margin-left: 10px;
+		margin-top: 10px;
 	}
