close #34 : center text in sizeChart

--- a/template_src/stylesheet/chart.css
+++ b/template_src/stylesheet/chart.css
@@ -13,3 +13,12 @@
 		margin: auto;
 		text-align: center;
 	}
+
+		#percentage {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: auto;
+		}
