close #44 : add a triangle to show the file view menu is openbale

--- a/template_src/stylesheet/btn.css
+++ b/template_src/stylesheet/btn.css
@@ -7,6 +7,13 @@
 	margin: 0 5px;
 }
 
+.btn.multiple:after {
+	content: "▾";
+	font-size: 1.2em;
+	float: right;
+	margin-left: 10px;
+}
+
 .btn-select-true {
 	background-color: #222;
 }
