--- a/template_src/stylesheet/chart.css
+++ b/template_src/stylesheet/chart.css
@@ -1,20 +1,19 @@
 .chart {
-  position: relative;
-  width: 100%;
-  padding-top: 60px;
+
 }
 
-	.svgContainer {
+	.chart svg {
+		padding-top: 45px;
 		position: absolute;
-		top: 45px;
+		top: 0;
 		bottom: 0;
 		left: 0;
 		right: 0;
 		margin: auto;
-		text-align: center;
 	}
 
 		#percentage {
+			text-align: center;
 			position: absolute;
 			top: 0;
 			bottom: 0;
