better feature css (not finish)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -178,23 +178,56 @@ li {
 * SHOWCASE
 *******************************************************/
 
-.half {
-  width: 50%;
-  display: inline-block;
-  vertical-align: middle;
+.showcase {
+  position: relative;
+  width: 40%;
+}
+
+.screenshot {
+  max-width: none;
+  width: 100%;
+}
+
+.showcase .logo {
+  width: 64px;
+  height: auto;
+  min-width: 64px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  box-shadow: none;
 }
 
 .showcase .title {
   color: #000;
   font-size: 1.6em;
+  padding: 0 0 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 .showcase .description {
-
+  text-align: left;
 }
 
 .showcase .links {
+  position: absolute;
+  bottom: 12px;
+  right: 0;
+  left: 0;
+  text-align: center;
+  background-color: #444;
+  height: 30px;
+  border-radius: 0 0 3px 3px;
+  border-top: 3px solid #D3D3D3;
+}
 
+.showcase .links .btn {
+  color: #fff;
+  line-height: 30px;
 }
 
 /******************************************************
