close #49 : button file view in chrome(imum) was bad sized

--- a/template_src/stylesheet/header.css
+++ b/template_src/stylesheet/header.css
@@ -13,6 +13,11 @@ header {
 		line-height: 40px;
 	}
 
+	header .btn.multiple {
+		width: 80px;
+		height: 40px;
+	}
+
 	.chartsTypeContainer {
 		position: fixed;
 	}
