close #50 : change width and height to max-width and max-height on logo header

--- a/template_src/stylesheet/header.css
+++ b/template_src/stylesheet/header.css
@@ -24,8 +24,8 @@ header {
 
 	.logo {
 		vertical-align: middle;
-		height: 32px;
-		width: 32px;
+		max-height: 32px;
+		max-width: 32px;
 	}
 
 	.title {
