add angular-app tests + fix bugs with constant, value and provider + close #41 : all node hasn't type (only found in imports) is set to internal (normally it's only resolved variables)

--- a/template_src/stylesheet/d3.css
+++ b/template_src/stylesheet/d3.css
@@ -42,6 +42,14 @@
   color: #3A015B;
 }
 
+.node.module {
+  fill: #0493D8;
+}
+
+.module {
+  color: #0493D8;
+}
+
 .node.angular, .node.config, .node.run {
   fill: #DF0400;
 }
