--- a/template_src/stylesheet/onOffSwitch.css
+++ b/template_src/stylesheet/onOffSwitch.css
@@ -1,50 +1,15 @@
 .onoffswitch {
-    position: relative; 
-    width: 70px;
-    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+    height: 32px;
+    width: 32px;
     float: right;
     margin-right: 25px;
     margin-top: 3px;
+    cursor: pointer;
+    background-repeat: no-repeat;
 }
-.onoffswitch-checkbox {
-    display: none;
+.onoffswitch.on {
+    background-image: url(../assets/img/lightOn.png);
 }
-.onoffswitch-label {
-    display: block; overflow: hidden; cursor: pointer;
-    border: 2px solid #D4D4D4; border-radius: 10px;
-}
-.onoffswitch-inner {
-    width: 200%; margin-left: -100%;
-    -moz-transition: margin 0.3s ease-in 0s; -webkit-transition: margin 0.3s ease-in 0s;
-    -o-transition: margin 0.3s ease-in 0s; transition: margin 0.3s ease-in 0s;
-}
-.onoffswitch-inner:before, .onoffswitch-inner:after {
-    float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
-    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
-    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-}
-.onoffswitch-inner:before {
-    content: "ON";
-    padding-left: 10px;
-    background-color: #FAFAFA; color: #333333;
-}
-.onoffswitch-inner:after {
-    content: "OFF";
-    padding-right: 10px;
-    background-color: #333333; color: #FAFAFA;
-    text-align: right;
-}
-.onoffswitch-switch {
-    width: 10px; margin: 10px;
-    background: #FFFFFF;
-    border: 2px solid #D4D4D4; border-radius: 10px;
-    position: absolute; top: 0; bottom: 0; right: 36px;
-    -moz-transition: all 0.3s ease-in 0s; -webkit-transition: all 0.3s ease-in 0s;
-    -o-transition: all 0.3s ease-in 0s; transition: all 0.3s ease-in 0s; 
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-    margin-left: 0;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right: 0px; 
+.onoffswitch.off {
+    background-image: url(../assets/img/lightOff.png);
 }
