--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,9 +24,10 @@ header {
   color: #fff;
   background-color: #444;
   border-bottom: 5px solid #D4D4D4;
-  padding-left: 10px;
+  padding: 0 10px;
   position: fixed;
-  width: 100%;
+  left: 0;
+  right: 0;
   z-index: 100;
   font-size: 1.5em;
 }
